infrastructure/controllers/kubescape.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubescape
  labels:
    istio-injection: disabled
